Table user {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(50) [default: 'seller', note: 'admin/seller']
  status boolean [default: true]
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp

  indexes {
    (email) [unique, name: 'unique_email']
    (email, password_hash) [name: 'login']
    (name) [name: 'search_by_name']
  }
}

Table customers {
  id int [pk, increment]
  user_id int [ref: > user.id]   // ← dono do cliente
  name varchar(255) [not null]
  phone varchar(20)
  address_street varchar(255)
  address_number varchar(20)
  address_notes varchar(255)
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table product_groups {
  id int [pk, increment]
  user_id int [ref: > user.id]   // ← dono do grupo
  name varchar(255) [not null]
  icon varchar(100)
}

Table products {
  id int [pk, increment]
  user_id int [ref: > user.id]   // ← dono do produto

  group_id int [ref: > product_groups.id]
  name varchar(255) [not null]
  description text
  image_url varchar(512)
  is_active boolean [default: true]

  price decimal(10,2) [not null, default: 0]
  stock int [default: 0]

  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp

  indexes {
    (name) [name: 'search_product_name']
    (group_id) [name: 'by_group']
  }
}

Table orders {
  id int [pk, increment]
  user_id int [ref: > user.id]  

  table_number varchar(20)
  notes text
  status varchar(20) [not null, note: 'open/closed/canceled']
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp
}

Table sales {
  id int [pk, increment]
  order_id int [ref: > orders.id]
  customer_id int [ref: > customers.id]
  user_id int [ref: > user.id]

  total_amount decimal(10,2) [not null]
  payment_method varchar(50) [not null, note: 'cash/card/pix']
  status varchar(20) [not null, note: 'paid/pending']

  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp

  indexes {
    (created_at) [name: 'sale_by_date']
    (user_id) [name: 'sale_by_user']
  }
}

Table sale_items {
  sale_id int [ref: > sales.id]
  product_id int [ref: > products.id]

  quantity int [not null]
  unit_price decimal(10,2) [not null]
  subtotal decimal(10,2) [not null]

  indexes {
    (sale_id) [name: 'by_sale']
    (product_id) [name: 'by_product']
  }

  primary key (sale_id, product_id)
}

